--- a/WebTest/WebTest/index.html
+++ b/WebTest/WebTest/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>First test using github.</h1>
+    <p>Making some changes on your current file. And giving another example of what I'm becoming to.</p>
 </body>
 </html>
