--- a/WebTest/WebTest/index.html
+++ b/WebTest/WebTest/index.html
@@ -8,5 +8,6 @@
     <h1>First test using github.</h1>
     <p>Making some changes on your current file. And giving another example of what I'm becoming to.</p>
     <p> Let's begin</p>
+    <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/573635_1013002254_47496237_q.jpg" alt="string Image"/>
 </body>
 </html>
