--- a/WebTest/WebTest/index.html
+++ b/WebTest/WebTest/index.html
@@ -9,6 +9,8 @@
     <p>Making some changes on your current file. And giving another example of what I'm becoming to.</p>
     <p> Let's begin</p>
     <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/573635_1013002254_47496237_q.jpg" alt="string Image"/>
+    <div id="encabezado">
     <h2>Making another change!</h2>
+        </div>
 </body>
 </html>
